# leviathan

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  crappytodolist.txt  documentation.md  todo.txt
ext/: collider.h  int128.h  todo.h  what_is_this.txt
ext/entity/: entity.cpp  entity.h  readme.txt
ext/entity/components/: collider_2d.cpp  collider_2d.h
ext/gui/: gui_constraints.h  text.h
ext/gui/constraints/: mousepos_constraint.h  pixel_constraint.h
ext/physics/: collider.h
ext/stupid/: int128.h  what.txt
ext/ui/: NOTE.txt  text_align.h  ui_component.cpp  ui_component.h  ui_constraints.cpp  ui_constraints.h  ui_menu.h
ext/ui/components/: texture_component.h
ext/ui/constraints/: pixel_constraint.h
include/: leviathan.h
include/lev/ai/: whatsthis.txt
include/lev/containers/: array.h  bitset.h  containers_all.h  hash_map.h  linked_list.h  string.h  vector.h
include/lev/core/: app.h  core.h  core_all.h  log.h  non_copyable.h  non_movable.h  time.h  util.h
include/lev/entity/: entity.h  note_to_self.txt
include/lev/graphics/: batch.h  blend.h  font.h  framebuffer.h  gfxutil.h  graphics.h  graphics_all.h  image.h  material.h  mesh.h  shader.h  sprite_batch.h  texture.h  texture_sampler.h
include/lev/input/: input.h
include/lev/io/: binary_stream.h  endian.h  file_stream.h  io.h  io_all.h  memory_stream.h  stream.h  whatsthis.txt
include/lev/math/: calc.h  circle.h  colour.h  ease.h  float2.h  line.h  mat3x2.h  mat4x4.h  math.h  math_all.h  matrix.h  pair.h  polygon.h  quad.h  quaternion.h  rect.h  rng.h  timer.h  transform.h  triangle.h  vec2.h  vec3.h
include/lev/node/: node.h
include/lev/node/gui/: gui_constraints.h
include/lev/node/gui/components/: clickable_texture.h
include/lev/node/gui/constraints/: pixel_constraint.h
include/lev/physics/: collider.h  physics_all.h  util.h  whatsthis.txt
include/lev/ui/: text_align.h  ui_all.h  ui_component.h  ui_constraints.h  ui_menu.h
include/lev/ui/components/: c_clickable_texture.h  c_texture.h  texture_component.h
include/lev/ui/constraints/: pixel_constraint.h
private/backend/: audio.h  audio_irrklang.cpp  renderer.h  renderer_opengl.cpp  system.h  system_sdl2.cpp
public/lev/assets/: asset_mgr.cpp  asset_mgr.h  whatsthis.txt
public/lev/audio/: music.h  sound.cpp  sound.h
public/lev/containers/: array.h  bitset.h  hash_map.h  linked_list.h  optional.h  pair.h  string.h  vector.h
public/lev/core/: app.cpp  app.h  log.cpp  memutil.cpp  strutil.cpp  time.cpp  util.h
public/lev/entity/: entity.h  node.cpp  node.h
public/lev/entity/components/: sprite_2d.h
public/lev/graphics/: blend.cpp  blend.h  compare.cpp  compare.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  gfxutil.cpp  gfxutil.h  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  render_pass.cpp  render_pass.h  render_target.cpp  render_target.h  shader.cpp  shader.h  sprite_batch.cpp  sprite_batch.h  texture.cpp  texture.h
public/lev/gui/: gui_component.cpp  gui_component.h  gui_constraints.cpp  gui_constraints.h  text.h
public/lev/gui/constraints/: mousepos_constraint.h  pixel_constraint.h
public/lev/input/: input.cpp  input.h
public/lev/io/: endian.cpp  endian.h  file_stream.cpp  file_stream.h  memory_stream.cpp  memory_stream.h  stream.cpp  stream.h
public/lev/lua/: whatsthis.txt
public/lev/math/: calc.cpp  calc.h  circle.cpp  circle.h  colour.cpp  colour.h  complex.cpp  complex.h  cuboid.h  ease.cpp  ease.h  line.cpp  line.h  mat3x2.cpp  mat3x2.h  mat4x3.cpp  mat4x3.h  mat4x4.cpp  mat4x4.h  polygon.cpp  polygon.h  quad.cpp  quad.h  quaternion.cpp  quaternion.h  rand.h  random.h  range.h  rect.h  timer.cpp  timer.h  transform.cpp  transform_2d.cpp  transform_2d.h  triangle.cpp  triangle.h  vec2.h  vec3.h
public/lev/network/: socket.h
public/lev/node/: node.cpp  node.h  signal.h
public/lev/node/2d/: collider_2d.cpp  collider_2d.h  mover.h  mover_2d.h  node2d.h  node_2d.h  sprite_2d.h
public/lev/node/gui/: clickable_texture.h  gui_component.cpp  gui_component.h  gui_constraints.cpp  gui_constraints.h  gui_node.cpp  gui_node.h  text.h
public/lev/node/gui/components/: clickable_texture.h  text.h
public/lev/node/gui/constraints/: mousepos_constraint.h  pixel_constraint.h
public/lev/physics/: collider.cpp  collider.h
src/backend/: graphics.h  graphics_opengl.cpp  input.h  platform.h  platform_sdl2.cpp  renderer.h  renderer_opengl.cpp  system.h  system_sdl2.cpp
src/containers/: string.cpp
src/core/: app.cpp  log.cpp  memutil.cpp  strutil.cpp  time.cpp
src/graphics/: batch.cpp  font.cpp  framebuffer.cpp  gfxutil.cpp  image.cpp  material.cpp  mesh.cpp  shader.cpp  sprite_batch.cpp  texture.cpp
src/input/: input.cpp
src/internal/: graphics.h  graphics_opengl.cpp  input.h  platform.h  platform_sdl2.cpp
src/internal/glad/src/: glad.c
src/io/: binary_stream.cpp  endian.cpp  file_stream.cpp  memory_stream.cpp  stream.cpp
src/math/: calc.cpp  circle.cpp  colour.cpp  ease.cpp  float2.cpp  line.cpp  mat3x2.cpp  mat4x4.cpp  polygon.cpp  quad.cpp  rect.cpp  timer.cpp  transform.cpp  triangle.cpp  vec2.cpp
src/node/gui/: gui_component.cpp
src/physics/: collider.cpp
src/ui/: ui_component.cpp  ui_constraints.cpp
testing/: main.cpp
testing/res/fonts/: arial.levfont  nokiafc.levfont
testing/res/levels/: 1.blvl
testing/res/shaders/: bloom.frag  blur.comp  blur_shader.frag  blur_shader.levshader  colourize.frag  colourize.levshader  colourize.vert  compute.comp  crt.frag  fade.comp  fragment.frag  gaussian.frag  generic.vert  metaballs_shader.frag  metaballs_shader.levshader  particle.comp  particle.levshader  post.comp  post.frag  post.levshader  post.vert  raytrace.comp  vertex.vert
testing/res/shdrs/: fragment.frag  vertex.vert
testing/src/: breakout.cpp  entity_thing.cpp  hashmap_test.cpp  le_word.cpp  main.cpp  metaballs.cpp  raytrace.cpp  sb_test.cpp  test_entity.cpp  test_framebuffer.cpp  test_funnyspin.cpp  test_misc.cpp  test_ui.cpp  yes.cpp
(+1 files in other folders)
